--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
             <version>1.18.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.0</version>
+        </dependency>
     </dependencies>
 </project>
